--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to <%= title %></h1>
+        <h1>Добро пожаловать в <%= title %></h1>
     </header>
